--- a/styles/header.css
+++ b/styles/header.css
@@ -2,6 +2,8 @@
     width: 24px;
     height: 24px;
     background-image: url("../img/Menu.svg");
+    background-repeat: no-repeat;
+    background-position: center;
     display: inline-block;
 }
 .cabeçalho{
@@ -9,11 +11,18 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
 }
 .container {
     display: flex;
     align-items: center;
 }
 .container__imagem {
-  
+  padding: 1em;
+}
+
+.lista-menu {
+    display: none;
+    position: absolute;
+    top:100%;
 }
