--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,22 @@
 @import url("styles/header.css");
-:root{
-    --cor-de-fundo: #d65a12;
-    --branco: #FFFFFF
-    var #EB9B00
-    --azul-degrade: linear-grandient(97.54deg, #002F52 35.49%)
-    }
-    
-    body{
-        background-color: var(--cor-de-fundo);
-    }
-    
-    h1{
-        background-color: white;
-    }
+@import url("styles/banner.css");
+
+:root {
+  
+  --cor-de-fundo:  #EBECEE;
+  --branco: #FFFFFF;
+  --laranja: #EB9800;
+  --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+  --fonte-principal: "Poppins";
+}
+body{
+
+background-color: var(--cor-de-fundo);
+font-family: var(--cor-de-fundo);
+font-size: 16px;
+font-weight: 400;
+
+}
+ h1{
+  background-color: white;
+ }
